fix main view on mobile

--- a/src/themes/journal/scss/journal.scss
+++ b/src/themes/journal/scss/journal.scss
@@ -405,7 +405,6 @@ li p {
 }
 
 section#post-list {
-  margin: 35px;
   padding: 25px; /* mind the gap */
   --aug-border: 2px;
   --aug-border-bg: #ffeec1;
